fix position btns on mobile

--- a/styles/pages/classes/klass.scss
+++ b/styles/pages/classes/klass.scss
@@ -63,8 +63,14 @@
 
         @include on-mobile {
           align-items: center;
-          flex-direction: column;
-          justify-content: center;
+          flex-wrap: wrap;
+          //flex-direction: column;
+          justify-content: space-between;
+          margin-bottom: 40px;
+        }
+
+        @include on-tablet {
+          margin-bottom: 40px;
         }
 
         .video-data {
